
2014-12-17
        README
                The source code licensing for the "main" program examples
                has changed from GNU Affero GPLv3 or later to plain
                GNU GPLv3 or later.

2015-01-26
       filelock/i_fcntl_locking.c
                Added support for the OFD locking commands (F_OFD_SETLK,
                F_OFD_SETLKW, F_OFD_GETLKW) that were added to Linux in
                version 3.15.
                (Only in "dist" version of code.)

2015-01-28
       cap/check_password_caps.c
                Fix a typo in a comment.
                (Only in "dist" version of code.)

2015-01-30
       threads/thread_multijoin.c
                Fix minor whitespace error.
                (See the erratum for page 651.)

2015-03-13
        shlibs/dynload.c
                Switch to using the more natural cast permitted by
                POSIX.1-2008 TC1 (2013). See also the erratum for page 864.
                (Only in "dist" version of code.)

2015-03-13
        shlibs/dynload.c
                Tweak comment on dlsym() cast permitted by
                POSIX.1-2008 TC1 (2013).
                (Only in "dist" version of code.)

2015-03-25
        namespaces/Makefile
        namespaces/demo_userns.c
        namespaces/demo_uts_namespaces.c
        namespaces/hostname.c
        namespaces/multi_pidns.c
        namespaces/ns_child_exec.c
        namespaces/ns_exec.c
        namespaces/ns_run.c
        namespaces/orphan.c
        namespaces/pidns_init_sleep.c
        namespaces/simple_init.c
        namespaces/t_setns_userns.c
        namespaces/unshare.c
        namespaces/userns_child_exec.c
        namespaces/userns_setns_test.c
                Added various namespaces-related code, covered in my article
                series on LWN.net, start at https://lwn.net/Articles/531114/

2015-03-25
        Makefile
        README
                Adjusted for addition of "namespaces" subdirectory